--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.3.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.5",
     "passport-jwt": "^4.0.1",
