--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=dev nest start",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
-    "start:debug": "cross-env NODE_ENV=dev nest start --debug --watch",
-    "start:stage": "cross-env NODE_ENV=stage node dist/main.js",
-    "start:prod": "cross-env NODE_ENV=prod node dist/main.js",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
